# glob

./: .gitignore  CMakeLists.txt  README.md  build_and_run.sh  clang-format.bash
all/: CMakeLists.txt
cmake/: CPM.cmake
include/glob/: fnmatch.hpp  glob.h  glob.hpp
include/glob/filesystem/: fs_fwd.hpp  fs_impl.hpp  fs_std.hpp  fs_std_fwd.hpp  fs_std_impl.hpp
samples/: glob_and_print_matches.cpp  print_matches.cpp  print_matches_recursive.cpp  rglob_and_print_matches.cpp
single_include/glob/: glob.hpp
source/: glob.cpp
src/: fnmatch.cpp  glob.cpp
standalone/: CMakeLists.txt
standalone/source/: main.cpp
test/: rglob_test.cpp
tests/: CMakeLists.txt  test_fnmatch.cpp
