cmake_minimum_required(VERSION 3.6)
project(GLOB)

if(NOT CMAKE_BUILD_TYPE)
  set(CMAKE_BUILD_TYPE Release)
endif()

set(CMAKE_CXX_FLAGS "-Wall -Wextra")
set(CMAKE_CXX_FLAGS_DEBUG "-g")
set(CMAKE_CXX_FLAGS_RELEASE "-O3")

# Disable deprecation for windows
if (WIN32)
  add_compile_definitions(_CRT_SECURE_NO_WARNINGS)
endif()

option(GLOB_BUILD_SHARED_LIBS "Build shared library" ON)
option(GLOB_BUILD_STATIC_LIBS "Build static library" ON)
option(GLOB_BUILD_SAMPLES "Build samples" ON)

set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin)
set(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/lib)
set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/lib)

FILE(GLOB GLOB_SOURCES "src/glob.cpp")
INCLUDE_DIRECTORIES("include")

if(GLOB_BUILD_SHARED_LIBS)
  ADD_LIBRARY(GLOB SHARED ${GLOB_SOURCES})
  SET_TARGET_PROPERTIES(GLOB PROPERTIES OUTPUT_NAME glob)
  TARGET_LINK_LIBRARIES(GLOB)
  SET_PROPERTY(TARGET GLOB PROPERTY CXX_STANDARD 17)
endif()

if(GLOB_BUILD_STATIC_LIBS)
  ADD_LIBRARY(GLOB_STATIC STATIC ${GLOB_SOURCES})
  SET_TARGET_PROPERTIES(GLOB_STATIC PROPERTIES OUTPUT_NAME glob_static)
  TARGET_LINK_LIBRARIES(GLOB_STATIC)
  SET_PROPERTY(TARGET GLOB_STATIC PROPERTY CXX_STANDARD 17)
endif()

if(GLOB_BUILD_SAMPLES)

  # GLOB_PRINT_MATCHESs sample
  ADD_EXECUTABLE(GLOB_PRINT_MATCHES "samples/glob.cpp")
  SET_TARGET_PROPERTIES(GLOB_PRINT_MATCHES PROPERTIES OUTPUT_NAME glob)
  TARGET_LINK_LIBRARIES(GLOB_PRINT_MATCHES GLOB)
  SET_PROPERTY(TARGET GLOB_PRINT_MATCHES PROPERTY CXX_STANDARD 17)

  # GLOB_PRINT_MATCHES_RECURSIVE sample
  ADD_EXECUTABLE(GLOB_PRINT_MATCHES_RECURSIVE "samples/rglob.cpp")
  SET_TARGET_PROPERTIES(GLOB_PRINT_MATCHES_RECURSIVE PROPERTIES OUTPUT_NAME rglob)
  TARGET_LINK_LIBRARIES(GLOB_PRINT_MATCHES_RECURSIVE GLOB)
  SET_PROPERTY(TARGET GLOB_PRINT_MATCHES_RECURSIVE PROPERTY CXX_STANDARD 17)
  
endif()

# make check - runs unit tests
if (UNIX)
  add_custom_target(check COMMAND ./tests)
endif(UNIX)